--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "path": "^0.12.7",
     "pinia": "^2.0.35",
     "sass": "^1.62.1",
     "vue": "^3.2.47",
