--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "path": "^0.12.7",
     "pinia": "^2.0.35",
+    "pinia-plugin-persist": "^1.0.0",
     "sass": "^1.62.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
